Another attempt at solving table overflow issues

--- a/apps/weights/src/Msg.css
+++ b/apps/weights/src/Msg.css
@@ -1,7 +1,7 @@
 .msg {
   display: flex;
   justify-content: center;
-  box-sizing: border-box;
+  min-height: 1em;
 }
 
 .msgbad {
